# SoulPrint-Canonical

./: .flaskenv  .gitignore  AGENTS.md  Additional Step.md  CHANGELOG.md  CLAUDE.md  CNAME  CONTEXT.md  CONTRIBUTING.md  DECISIONS.md  LICENSE  MEM0_BOUNDARY_DESIGN.md  POSITIONING.md  Procfile.dev  README.md  REPAIR_NOTES.md  REPO_AUDIT.md  ROADMAP.md  SECURITY.md  SETUP.md  STRATEGY.md  SoulPrint.spec  _config.yml  alert_12.json  privacy.md  pyproject.toml  quality-thresholds.json  requirements-build.txt  requirements-minimal.txt  requirements.txt  skills-lock.json
.claude/: settings.json  settings.local.json
.codex/: AGENTS.md  config.toml
.github/: FUNDING.yml
Claude-Code/: README.md
For-Claude-Code/: Claude-Code.md  PRODUCT-GRAMMAR-LOCK.md  README-REWRITE.md  REPO-AUDIT.md  REPO-HYGIENE-PROMPT.md  SECURITY.md
archive/: README.md
bootstrap/: install_linux.sh  install_macos.sh  install_windows.bat
context/: experts.md  llm-config.md  soul.md  template-h.md  user.md
docs/: ANSWERING_BOUNDARY_DESIGN.md  MEMORY_PASSPORT_SPEC.md  README.md  executable-packaging-overview.md  getting-started.md  manifesto.md  obsidian-raw-inbox.md  quiet-archive-coherence-pass.md
landing/: README.md  index.html  style.css
reader/: README.md  requirements.txt  test_nagato_reference.py
roadmap/: Design.md  GITHUB-README.md  Here is the clean hybrid spine.md  LAUNCH-PLAYBOOK.md  Project_Manager.md  RELEASE-v0.1.0.md  SOULPRINT-30-DAY-VISION.md  SOULPRINT-BRAND-PROMPTS.md  SOULPRINT-PROJECT-AUDIT.md  UPGRADE-CONTINUITY.md
sample_data/: .gitkeep  chatgpt.json  claude.json  claude_code.jsonl  gemini_conv.json  gemini_takeout.json  gemini_takeout_myactivity.json  grok.json
scripts/: SoulPrint.iss  SoulPrint.spec  build_linux.sh  build_macos.sh  build_windows.bat  check_db.py  check_distill.py  check_sources.py
site/: README.md  package.json  pnpm-lock.yaml
src/: cli.py  config.py  main.py  mcp_server.py  run.py  runtime.py  soulprint_home.py  verify.py
(+426 files in other folders)
